[package]
name = "libfetchxsrf"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.29"
reqwest = { version = "0.13.3", features = ["blocking", "cookies", "form"] }
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
url = "2.5.8"

[dev-dependencies]
httpmock = "0.8.3"
tempfile = "3.27.0"
